--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error nihil voluptas quas
               cupiditate fugit expedita, maiores consectetur qui. Nihil corporis doloribus minus aliquam nesciunt
               aliquid nam debitis. At quia laudantium, aut a nemo laborum dicta consequatur placeat odit. Molestias,
-              similique?</p>
+              similique? Tons of text about candy.</p>
           </div>
         </div>
       </div>
